--- a/packages/web/scss/layout/_footer.scss
+++ b/packages/web/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  @media (max-width: 850px) {
+  @media (max-width: 1025px) {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
