--- a/packages/web/scss/layout/_header.scss
+++ b/packages/web/scss/layout/_header.scss
@@ -3,7 +3,7 @@ header {
   display: none;
 }
 
-@media (min-width: 850px) {
+@media (min-width: 950px) {
   
   header {
     width: 100%;
